<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">benchscaw</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="starttext">A series of short videos clips will play played to calculate the WebM playback performance of your device</string>
    <string name="start">Start</string>
    <string name="copy">Copy to clipboard</string>
    <string name="empty"></string>
    <string name="webm270">480x270 WebM</string>
    <string name="webm360">640x360 WebM</string>
    <string name="webm480">852x480 WebM</string>
    <string name="webm576">1024x576 WebM</string>
    <string name="webm720">1280x720 WebM</string>
    <string name="webm1080">1920x1080 WebM</string>
    <string name="details">Show Details</string>
    <string name="fps">1000FPS</string>
    <string name="dash">" - "</string>
    <string name="restart">Run another test</string>
    <string name="startFFMPEG">Test using FFMPEG</string>
    <string name="startMediaCodec">Test using MediaCodec</string>
    <string name="usingFFMPEG">Using FFMPEG</string>
    <string name="usingMediaCodec">Using MediaCodec</string>
    <string name="send">Send results to websca.ws</string>
    <string name="startLibvpxEncode">Test encoding using libvpx</string>
    <string name="usingLibvpxEncoder">Using libvpx encoder</string>
    <string name="usingNoTest">Device Information Only</string>
    <string name="noTest">Show device information only</string>
    <string name="donate">Donate</string>

</resources>